<resources>
    <string name="app_name">ChessRepertoirePractice</string>
    <string name="title_activity_sandbox">SandboxActivity</string>

    <string name="player_move_options">Player Move Options</string>
    <string name="opponent_move_options">Opponent Move Options</string>
    <string name="other_move_settings">Other Move Settings</string>
    <string name="best_moves">Best</string>
    <string name="theory_moves">Theory</string>
    <string name="preferred_moves">Preferred</string>
    <string name="gambit_moves">Gambits</string>
    <string name="mistake_moves">Mistakes</string>
    <string name="sandbox_mode">Sandbox Mode</string>
    <string name="automate_moves">Automate Opponent</string>
    <string name="undo_move">Undo Move</string>
    <string name="undo_mistake">Undo Mistake</string>
    <string name="add_move">Add To Repertoire</string>
    <string name="search_repertoire">Search Repertoire</string>
    <string name="show_description">Show Description</string>
    <string name="show_hint">Show Hint</string>
    <string name="show_options">Show Options</string>
    <string name="start_display_text">White to move</string>
    <string name="opponent_move">Opponent Move</string>
    <string name="practice_settings">Settings</string>
    <string name="board_settings">Board Settings</string>
    <string name="edit_configurations">Edit Configurations</string>
    <string name="edit_description">Edit Description</string>
    <string name="load_pgn">Load PGN</string>
    <string name="export_pgn">Export PGN</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="player_mistake_description_header">Mistake!\n</string>
    <string name="incorrect_move_description_header">Incorrect Move\n</string>
    <string name="opponent_mistake_description_header">Correct, this was a mistake\n</string>
    <string name="nope">Nope!</string>
    <string name="missed_mistake">Nope! Missed a mistake</string>
    <string name="board_style">Board Style</string>
    <string name="piece_style">Piece Style</string>

    <string name="new_configuration">New Configuration</string>
    <string name="delete_configuration">Delete Configuration</string>
    <string name="sync_repertoire">Sync Repertoire</string>
    <string name="start_training">Start Training</string>
    <string name="assert_mistake">Mistake?</string>


    <string name="preference_file_key">com.leverett.chessrepertoirepractice.Prefs</string>
    <string name="board_style_pref_key">boardStylePref</string>
    <string name="piece_style_pref_key">pieceStylePref</string>

    <string name="clipboard_toast">Copied To Clipboard</string>
    <string name="configuration_popup_hint">Name Configuration</string>
    <string name="configurations">Configurations</string>
    <string name="select_all">Select All</string>
    <string name="account_info">Input Account Info</string>
    <string name="account_name">Account Name</string>
    <string name="account_name_hint">Lichess Username</string>
    <string name="api_token_label">Account Authorization Token</string>
    <string name="api_token_hint">API Token</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="color_text">Color</string>
    <string name="test_button">Test</string>
    <string name="sync_options">Sync Options</string>
    <string name="lichess_sync_button">Sync Repertoire with Lichess</string>
    <string name="download_configurations_button">Download Configurations</string>
    <string name="upload_repertoire_button">Upload Repertoire</string>

</resources>