<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sync_options_popup"
    android:layout_width="480dp"
    android:layout_height="640dp"
    android:background="@color/white">

    <Button
        android:id="@+id/lichess_sync_button"
        style="@style/SyncOptionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lichess_sync_button"
        app:layout_constraintBottom_toTopOf="@+id/download_configurations_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        style="@style/SyncOptionButton"
        android:id="@+id/download_configurations_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/download_configurations_button"
        app:layout_constraintBottom_toTopOf="@+id/upload_repertoire_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lichess_sync_button" />

    <Button
        style="@style/SyncOptionButton"
        android:id="@+id/upload_repertoire_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_repertoire_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_configurations_button" />


</androidx.constraintlayout.widget.ConstraintLayout>