<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintWidth_percent="0.9"
    android:background="@color/white">

    <TextView
        android:id="@+id/account_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/account_name_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/account_name_input"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:hint="@string/account_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/api_token_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_name_label" />

    <TextView
        android:id="@+id/api_token_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_token_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/api_token_input"
        app:layout_constraintTop_toBottomOf="@+id/account_name_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/api_token_input"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:hint="@string/api_token_hint"
        app:layout_constraintBottom_toTopOf="@+id/ok_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/api_token_label" />

    <Button
        android:id="@+id/ok_button"
        style="@style/OkButton"
        android:layout_height="@dimen/button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/account_name_input" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/CancelButton"
        android:layout_height="@dimen/button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_name_input" />

</androidx.constraintlayout.widget.ConstraintLayout>